--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 <!-- i <body> har man alt indhold på siden som brugeren kan se -->
 <body>
 
-<!-- Her skal sidens indhold ligge -->
+<ul>
+    <li>Mælk</li>
+    <li>Ost</li>
+    <li>Oksekød</li>
+    <li>Rugbrød</li>
+</ul>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
